# kopernikus

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  configure-lin-64.sh  kopernikus.c  project.4coder
libascom/: CMakeLists.txt  alpaca.c  alpaca.h
libascom/http/: client.c  client.h
libcore/: CMakeLists.txt  display.c  display.h  gpu.c  gpu.h  input.c  input.h  log.c  log.h  string.c  string.h  types.h  ui.c  ui.h
libcore/ui/: icons.h  object-browser.c  object-browser.h  render.c  render.h
src/: CMakeLists.txt  browser.c  browser.h  build.sh  display.cpp  display.h  gear.c  gear.h  kopernikus.c  kopernikus.cpp  location.c  location.h  math.cpp  math.h  object.h  planet.cpp  planet.h  render.cpp  render.h  sequencer.c  sequencer.h  settings.c  settings.h  skymap.c  skymap.h  types.h  ui.c  ui.h
src/data/: setup.ini
src/libascom/: CMakeLists.txt  alpaca.c  alpaca.h  client.c  client.h  device.c  device.h  observing_conditions.c  observing_conditions.h  telescope.c  telescope.h
src/libascom/http/: client.c  client.h
src/libascom/utils/: cJSON.c  cJSON.h  cJSON_Helper.c  cJSON_Helper.h  cJSON_Utils.c  cJSON_Utils.h  url.c  url.h
src/libcore/: CMakeLists.txt  display.c  display.h  gpu.c  gpu.h  input.c  input.h  log.c  log.h  math.c  math.h  string.c  string.h  timer.c  timer.h  types.h
src/libcore/arch/: thread.h
src/libcore/arch/linux/: linux_thread.c
src/libcore/arch/mac/: mac_thread.c
src/libcore/arch/win32/: win32_thread.c
